Regression: Collapsed multi-input sockets not collapsing noodles #101361

Closed
opened 2022-09-25 14:44:17 +02:00 by Erindale · 12 comments

System Information
Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 517.40

Blender Version
Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-09-22 21:54, hash: e9344d329f
Worked: 3.3

Likely caused by 40d815dff6

Short description of error
When a multi-input socket is collapsed with its node, the noodles don't go to a single point as they should
image.png

Exact steps for others to reproduce the error
Add many objects and plug into a multi-input socket
Collaspe the node

**System Information** Operating system: Windows-10-10.0.22000-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 517.40 **Blender Version** Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-09-22 21:54, hash: `e9344d329f` Worked: 3.3 Likely caused by 40d815dff6 **Short description of error** When a multi-input socket is collapsed with its node, the noodles don't go to a single point as they should ![image.png](https://archive.blender.org/developer/F13570665/image.png) **Exact steps for others to reproduce the error** Add many objects and plug into a multi-input socket Collaspe the node
Author

Added subscriber: @Erindale

Added subscriber: @Erindale

Added subscriber: @mod_moder

Added subscriber: @mod_moder

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

image.png
Regression 3.4

![image.png](https://archive.blender.org/developer/F13570862/image.png) Regression 3.4
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Thanks for the report. I've not tested this myself. Raising the priority for now as it seems a regression

Thanks for the report. I've not tested this myself. Raising the priority for now as it seems a regression

I can't find the exact commit as I'm inexperienced with it, but so far it's somewhere between September 2-3, something like
https://developer.blender.org/rB40d815dff6515834c1bce40c0a34cc80b39655d5

I can't find the exact commit as I'm inexperienced with it, but so far it's somewhere between September 2-3, something like https://developer.blender.org/rB40d815dff6515834c1bce40c0a34cc80b39655d5
Member

Added subscriber: @lone_noel

Added subscriber: @lone_noel
Member

I think it was caused by 40d815dff6 where the logic for calculating the multi input link position was changed a bit and doesn't check for the "hidden" state of the node anymore:

From:

if (!(link.tonode->flag & NODE_HIDDEN) && link.tosock->flag & SOCK_MULTI_INPUT) 

To:

if (socket.flag & SOCK_MULTI_INPUT && socket.in_out == SOCK_IN)
I think it was caused by 40d815dff651 where the logic for calculating the multi input link position was changed a bit and doesn't check for the "hidden" state of the node anymore: From: ``` if (!(link.tonode->flag & NODE_HIDDEN) && link.tosock->flag & SOCK_MULTI_INPUT) ``` To: ``` if (socket.flag & SOCK_MULTI_INPUT && socket.in_out == SOCK_IN) ```

My haste failed me, I needed to study this particular commit in more detail. Indeed, it looks like a problem.

My haste failed me, I needed to study this particular commit in more detail. Indeed, it looks like a problem.
Iliya Katushenock self-assigned this 2022-09-25 16:53:08 +02:00
Pratik Borhade changed title from Collapsed multi-input sockets not collapsing noodles to Regression: Collapsed multi-input sockets not collapsing noodles 2022-09-26 04:10:42 +02:00

This issue was referenced by 8da253cfb6

This issue was referenced by 8da253cfb64fe578bd8136a7a0a4c4aa74fb536b
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101361
No description provided.