Fix T101361: Collapsed multi-input sockets not collapsing noodles

Caused by 40d815dff651, which removed the check for "hidden" nodes.

Differential Revision: https://developer.blender.org/D16061